New results and updated README